<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" >AquaHey!</string>

    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">AquaHey!</string>
    <string name="slide_1_desc">AquaHey! Lets You Discover Water Supplier That Deliver Near You.!</string>

    <string name="slide_2_title">Order Aqua</string>
    <string name="slide_2_desc">Select Items From The Item List.Enter Choose Delivery Address!</string>

    <string name="slide_3_title">Schedule Delivery</string>
    <string name="slide_3_desc">Select Time Of Delivery (Now/Later).Choose Payment Option (Online/COD)!</string>

    <string name="slide_4_title">Order Received</string>
    <string name="slide_4_desc">Receive Delivery From The Dealer Near You.Rate Your Delivery Experience</string>



    <string name="login">Login</string>
    <string name="signup">Sign Up</string>


    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No.</string>
    <string name="username">User Name</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <array name="order_type">

        <item>Immediately</item>
        <item>Regularly</item>

    </array>

    <array name="states">
        <item>Maharashtra</item>
    </array>
    <array name="districts">
        <item>Mumbai</item>
        <item>New Mumbai</item>
        <item>Thane</item>

    </array>
    <array name="city">
        <item>Mumbra</item>
        <item>Diva</item>
        <item>Kalwa</item>
        <item>Naupada</item>
        <item>Shilphata</item>
        <item>Badlapur</item>
        <item>Ghodbandar</item>
        <item>Shree Nagar</item>
        <item>Anu Nagar</item>
        <item>Majiwada</item>
        <item>Lal Bahadur Shastri Road</item>
        <item>Ghodbunder Road</item>
        <item>Kasarvadavali</item>
        <item>Kolshet Road</item>
        <item>Panch Pakhadi</item>
        <item>Pokhran Road No. 1</item>
        <item>Vartak Nagar</item>
        <item>Eastern Express Highway</item>

    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_aqua">Nearby Aqua</string>
    <string name="rs">rs</string>
    <string name="mrp">MRP:</string>
    <string name="dealer">Dealer:</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="spinner_hint">Districts</string>
    <string name="enter_your_register_mobile_number">Enter Your Register Mobile Number</string>

    <string name="confirm_password">confirm Password</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="aquahey">AquaHey!</string>
    <string name="call">CALL</string>
    <string name="book_order">Book Order</string>
    <string name="skip">Skip</string>
    <string name="why_mobile_number">Why Mobile Number?</string>
    <string name="for_easily_reach_your_order_to_your_place">For Easily Reach your order to your place</string>
    <string name="order_details">Order Details</string>
    <string name="price_label">Price:</string>
    <string name="total_rs">Total RS:</string>
    <string name="your_favourite">Your Favorite</string>
    <string name="tanker">Tanker</string>
    <string name="my_aqua">My Aqua</string>
    <string name="water_delivery_app">A Water Delivering App!</string>

    <string name="action_help">Help &amp; Contact</string>
    <string name="action_about">About Us</string>
    <string name="action_contact">Contact Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="website_link"><a href="http://aquahey.com/website/index.html"> www.aquahey.com</a></string>
    <string name="fb_link"><a href="https://www.facebook.com/AquaHeyApp/?modal=admin_todo_tour"> facebook.com/aquahey</a></string>
    <string name="insta_link"><a href="https://www.instagram.com/aquaheyapp/"> instagram.com/aquahey</a></string>
    <string name="play_link"><a href="https://play.google.com/store/apps/details?id=au.com.intelematics.EntuneLexus&amp;hl=en_AU"> playstore.com/aquahey</a></string>

    <string name="text_visit_our_website">Visit Our Website : </string>
    <string name="text_like_on_fb">Like Us on Facebook :</string>
    <string name="text_follow_us_on_insta">Follow Us on Instagram :</string>
    <string name="about_us">About Us</string>
    <string name="rate_us_on_playstore">Rate Us on Play Store:</string>
    <string name="app_version">App Version: </string>

</resources>
