<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="aquaModel"
            type="com.app.aquahey.purepani.viewmodel.AquasViewHolder" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                app:imageUrl="@{aquaModel.product.imagePath}" />


            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/image"
                android:layout_toRightOf="@+id/image"
                android:text="@{aquaModel.product.pName}"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/image"
                android:layout_toRightOf="@+id/image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mrp"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@{aquaModel.product.price}"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/rs"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dealer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_layout"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/image"
                android:layout_toRightOf="@+id/image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dealer"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dealer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@{aquaModel.product.dealerName}"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@{aquaModel.product.rating}"
                android:textColor="@color/grey_dark"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dealer_layout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/book_order"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />


                <TextView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/call"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</layout>