<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        style="@style/LargeTextview"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/order_details"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnContd4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btnedit"
            android:text="Cancel"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btnresend"
            android:text="Proceed to pay"
            android:textColor="#ffff" />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_margin="8dp"
        android:background="@drawable/listview_background"
        android:elevation="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="4dp"
            android:src="@drawable/ltr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                style="@style/RegularTextview"
                android:layout_margin="4dp"
                android:text="Bisleri 5 ltr"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="4dp"
                    app:srcCompat="@drawable/plus" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="4dp"
                    app:srcCompat="@drawable/minus" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextview"
                    android:layout_margin="8dp"
                    android:text="@string/price_label"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <TextView
                    style="@style/RegularTextview"
                    android:id="@+id/p_price"
                    tools:text="00"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextview"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/total_rs"
                    android:textAlignment="center"
                    android:textColor="#000"/>


                <TextView
                    style="@style/RegularTextview"
                    android:id="@+id/total"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    tools:text="00"
                  android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/addressList"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_margin="8dp"
        android:background="@drawable/listview_background"
        android:divider="@null"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />


    <Button
        android:id="@+id/more_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressList"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_new_address"
        android:elevation="8dp"
        android:text="Add New Address"
        android:textColor="#fff" />


</RelativeLayout>